Fixed the layout issue for base screens

--- a/src/components/bank/Bank.module.css
+++ b/src/components/bank/Bank.module.css
@@ -5,5 +5,5 @@ body {
 
 .canvasBank {
   height: 50vh !important;
-  width: 30% !important;
+  width: 70% !important;
 }
